--- a/.github/workflows/bruno-deploy.yml
+++ b/.github/workflows/bruno-deploy.yml
@@ -27,10 +27,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build
-    - run: npm run start
+    - run: npm run export
     
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@4.1.3
       with:
         branch: gh-pages # The branch the action should deploy to.
-        folder: build # The folder the action should deploy.
+        folder: out # The folder the action should deploy.
